@@ -1,3 +1,8 @@
+2007-02-27  Per Bothner  <per@bothner.com>
+
+	* testing.scm (%test-error): Need separate Kawa case for exception
+	type #t.
+
 2007-02-14  Per Bothner  <per@bothner.com>
 
 	* testing.scm (test-runner-reset): Initialize test-result-alist!.
